[gd_scene load_steps=10 format=3 uid="uid://c5idu7a0lm5ak"]

[ext_resource type="Script" uid="uid://3lo8tewbxu3e" path="res://player.gd" id="1_170y2"]
[ext_resource type="Texture2D" uid="uid://p1p7cy0aw35n" path="res://art/player_walk1.png" id="2_7pvse"]
[ext_resource type="Texture2D" uid="uid://c2wv8nslcmtd" path="res://art/player_walk2.png" id="3_2c3mn"]
[ext_resource type="AudioStream" uid="uid://dt1744banegg6" path="res://art/gunshot.ogg" id="4_usvk1"]
[ext_resource type="AudioStream" uid="uid://cikthn76ex44e" path="res://art/item_pickup.ogg" id="5_prgdg"]
[ext_resource type="AudioStream" uid="uid://236xiuas61vm" path="res://art/player_dash.ogg" id="6_e1jap"]
[ext_resource type="AudioStream" uid="uid://dw5bkibvh1bph" path="res://art/player_hit.ogg" id="7_ka2ee"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v0w3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7pvse")
}, {
"duration": 1.0,
"texture": ExtResource("3_2c3mn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2ldf"]
radius = 31.0
height = 78.91

[node name="Player" type="Area2D" groups=["player"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_170y2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7475, 0.7475)
sprite_frames = SubResource("SpriteFrames_v0w3g")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.455)
shape = SubResource("CapsuleShape2D_i2ldf")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(67.72, -0.06)

[node name="GunTimer" type="Timer" parent="." groups=["bullet"]]
wait_time = 0.25

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="UltCooldownTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="UltDurationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_usvk1")
volume_db = 1.0

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_prgdg")
volume_db = 6.0

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_e1jap")
volume_db = 6.0

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ka2ee")
volume_db = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="UltCooldownTimer" to="." method="_on_ult_cooldown_timer_timeout"]
[connection signal="timeout" from="UltDurationTimer" to="." method="_on_ult_duration_timer_timeout"]
